--- a/index.html
+++ b/index.html
@@ -3,7 +3,30 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./assets/styles/menu.css" />
 		<title>Lucky Duck - Meny</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="container">
+			<header>
+				<!-- Logo and title -->
+				<a href="index.html" class="link-home"><img src="./assets/images/lucky_duck.png" alt="Logo image" class="header-logo" /></a>
+				<h1 id="h1-title">Meny</h1>
+				<!-- Dropdown for language selection -->
+				<div class="dropdown">
+					<button onclick="langFunction()" class="dropbtn">Language</button>
+					<div class="lang-dropdown" id="langDropdown">
+						<a href="#" id="swe">Svenska</a>
+						<a href="#" id="eng">English</a>
+					</div>
+				</div>
+			</header>
+			<main>
+				<!-- Melker add content -->
+			</main>
+			<footer>
+				<p class="copyright">&copy; Grupp 9</p>
+			</footer>
+		</div>
+	</body>
 </html>
