--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
 				<p class="copyright">&copy; Grupp 9</p>
 			</footer>
 		</div>
+		<script src="./assets/script/menu.js"></script>
 	</body>
 </html>
