--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 							</div>
 						</div>
 		
-						<div id="sort">
+						<div id="sorta">
 							<p>Sortera</p>
-							<select id="">
+							<select id="sortera">
 								<option value="standard">Standard</option>
 								<option value="priceHighToLow">Pris högt till lågt</option>
 								<option value="priceLowToHigh">Pris lögt till högt</option>
