--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
 		<title>Lucky Duck - Meny</title>
 	</head>
 	<body>
+
+					<!-- test__________________________ -->
+					<div id="basket">
+
+						<p id="totalAmount"></p>
+						<p id="totalProducts"></p>
+					</div>
+		
+					<!-- test_______________________-->
+
 		<div class="container">
+
+
 			<header>
 				<!-- Logo and title -->
 				<a href="index.html" class="link-home"><img src="./assets/images/lucky_duck.png" alt="Logo image" class="header-logo" /></a>
