--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 				<!-- Logo and title -->
 				<a href="index.html" class="link-home"><img src="./assets/images/lucky_duck.png" alt="Logo image" class="header-logo" /></a>
 				<h1 id="h1-title">Meny</h1>
-				<!-- Dropdown for language selection -->
+				<!-- Basket -->
+				<div id="basket" class="basket">
+					<p id="totalAmount"></p>
+					<p id="totalProducts"></p>
+				</div>
+				<!-- Language selection -->
 				<div class="language-selection">
 					<a href="#" id="swe" hidden>Svenska</a>
 					<a href="#" id="eng">English</a>
