basket och sort inlagt

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 					<p id="totalAmount"></p>
 					<p id="totalProducts"></p>
 				</div>
+
 				<!-- Language selection -->
 				<div class="language-selection">
 					<a href="#" id="swe" hidden>Svenska</a>
@@ -75,7 +76,7 @@
 
 						<div>
 							<p id="sort">Sortera</p>
-							<select id="">
+							<select id="sortera">
 								<option value="standard">Standard</option>
 								<option value="priceHighToLow">Pris högt till lågt</option>
 								<option value="priceLowToHigh">Pris lögt till högt</option>
