senaste, den funkar inte så bra :)

--- a/index.html
+++ b/index.html
@@ -32,27 +32,27 @@
 						<div class="checkbox-choice" id="filterTextBlockMeat">
 							<h2 id="choice">Välj</h2>
 							<label for="vegetarian">
-								<input type="checkbox" id="vegetarian" name="vegetarian" value="vegetarian" />
+								<input type="checkbox" id="vegetarian" name="Vegetarian" value="Vegetarisk" />
 								Vegetariskt
 							</label>
 							<br />
 							<label for="beef">
-								<input type="checkbox" id="beef" name="beef" value="beef" />
+								<input type="checkbox" id="beef" name="Beef" value="Kött" />
 								Nötkött
 							</label>
 							<br />
 							<label for="pork">
-								<input type="checkbox" id="pork" name="pork" value="pork" />
+								<input type="checkbox" id="pork" name="Pork" value="Kött" />
 								Griskött
 							</label>
 							<br />
 							<label for="chicken">
-								<input type="checkbox" id="chicken" name="chicken" value="chicken" />
+								<input type="checkbox" id="chicken" name="Chicken" value="Kyckling" />
 								Kyckling
 							</label>
 							<br />
 							<label for="fish">
-								<input type="checkbox" id="fish" name="fish" value="fish" />
+								<input type="checkbox" id="fish" name="Fish" value="Fisk" />
 								Fisk
 							</label>
 						</div>
