sortering av allergi, maträtter, ändring av allergier i jason ordnat så add to cart funkar vid filtrering. reset filterknappen är fortfarande kvar om den ska tas bort

--- a/index.html
+++ b/index.html
@@ -44,28 +44,28 @@
 					<div class="container-choice" id="container-choice">
 						<div class="checkbox-choice" id="filterTextBlockMeat">
 							<h2 id="choice">Välj</h2>
-							<input type="checkbox" class="category-checkbox" id="vegetarian-input" data-filter="vegetarian" />
+							<input type="checkbox" class="category-checkbox" id="vegetarian-input" data-filter="vegetarian" value="vegetarian" />
 							<label id="vegetarian" for="vegetarian-input"> Vegetariskt </label>
 							<br />
-							<input type="checkbox" class="category-checkbox" id="beef-input" data-filter="beef" />
+							<input type="checkbox" class="category-checkbox" id="beef-input" data-filter="beef" value="beef" />
 							<label id="beef" for="beef-input"> Nötkött </label>
 							<br />
-							<input type="checkbox" class="category-checkbox" id="pork-input" data-filter="pork" />
+							<input type="checkbox" class="category-checkbox" id="pork-input" data-filter="meat" value="pork" />
 							<label id="pork" for="pork-input"> Griskött </label>
 							<br />
-							<input type="checkbox" class="category-checkbox" id="chicken-input" data-filter="chicken" />
+							<input type="checkbox" class="category-checkbox" id="chicken-input" data-filter="chicken" value="chicken" />
 							<label id="chicken" for="chicken-input"> Kyckling </label>
 							<br />
-							<input type="checkbox" class="category-checkbox" id="fish-input" data-filter="fish" />
+							<input type="checkbox" class="category-checkbox" id="fish-input" data-filter="fish" value="fish" />
 							<label id="fish" for="fish-input"> Fisk </label>
 						</div>
 						<!-- Checkbox for chosing allergies -->
 						<div class="checkbox-choice" id="filterTextBlockAllergies">
 							<h2 id="allergies">Allegier</h2>
-							<input type="checkbox" class="category-checkbox" id="gluten-input" data-filter="gluten" />
+							<input type="checkbox" class="category-checkbox" id="gluten-input" data-filter="gluten" value="gluten" />
 							<label id="gluten" for="gluten"> Glutenfritt </label>
 							<br />
-							<input type="checkbox" class="category-checkbox" id="lactose-input" data-filter="lactose" />
+							<input type="checkbox" class="category-checkbox" id="lactose-input" data-filter="lactose" value="milk" />
 							<label id="lactose" for="lactose"> Laktosfritt </label>
 						</div>
 						<!-- Button to clear filter -->
