--- a/index.html
+++ b/index.html
@@ -46,28 +46,28 @@
 						<div class="checkbox-choice" id="filterTextBlockMeat">
 							<h2 id="choice">Välj</h2>
 							<input type="checkbox" class="category-checkbox" id="vegetarian-input" data-filter="vegetarian" value="vegetarian" />
-							<label id="vegetarian" for="vegetarian-input"> Vegetariskt </label>
+							<label id="vegetarian" for="vegetarian-input" name="vegetarian" value="vegetarian"> Vegetariskt </label>
 							<br />
 							<input type="checkbox" class="category-checkbox" id="beef-input" data-filter="beef" value="beef" />
-							<label id="beef" for="beef-input"> Nötkött </label>
+							<label id="beef" for="beef-input" name="beef" value="beef"> Nötkött </label>
 							<br />
 							<input type="checkbox" class="category-checkbox" id="pork-input" data-filter="meat" value="pork" />
-							<label id="pork" for="pork-input"> Griskött </label>
+							<label id="pork" for="pork-input" name="pork" value="pork"> Griskött </label>
 							<br />
 							<input type="checkbox" class="category-checkbox" id="chicken-input" data-filter="chicken" value="chicken" />
-							<label id="chicken" for="chicken-input"> Kyckling </label>
+							<label id="chicken" for="chicken-input" name="chicken" value="chicken"> Kyckling </label>
 							<br />
 							<input type="checkbox" class="category-checkbox" id="fish-input" data-filter="fish" value="fish" />
-							<label id="fish" for="fish-input"> Fisk </label>
+							<label id="fish" for="fish-input" name="fish" value="fish"> Fisk </label>
 						</div>
 						<!-- Checkbox for chosing allergies -->
 						<div class="checkbox-choice" id="filterTextBlockAllergies">
 							<h2 id="allergies">Allegier</h2>
 							<input type="checkbox" class="category-checkbox" id="gluten-input" data-filter="gluten" value="gluten" />
-							<label id="gluten" for="gluten"> Glutenfritt </label>
+							<label id="gluten" for="gluten" name="gluten" value="gluten"> Glutenfritt </label>
 							<br />
 							<input type="checkbox" class="category-checkbox" id="lactose-input" data-filter="lactose" value="milk" />
-							<label id="lactose" for="lactose"> Laktosfritt </label>
+							<label id="lactose" for="lactose" name="lactose" value="milk"> Laktosfritt </label>
 						</div>
 						<!-- Button to clear filter -->
 						<div class="clearFilter">
