--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 						<div class="checkbox-choice" id="filterTextBlockAllergies">
 							<h2 id="allergies">Allegier</h2>
 							<input type="checkbox" class="category-checkbox" id="gluten-input" data-filter="gluten" value="gluten" />
-							<label id="gluten" for="gluten" name="gluten" value="gluten"> Glutenfritt </label>
+							<label id="gluten" for="gluten-input" name="gluten" value="gluten"> Glutenfritt </label>
 							<br />
 							<input type="checkbox" class="category-checkbox" id="lactose-input" data-filter="lactose" value="milk" />
-							<label id="lactose" for="lactose" name="lactose" value="milk"> Laktosfritt </label>
+							<label id="lactose" for="lactose-input" name="lactose" value="milk"> Laktosfritt </label>
 						</div>
 						<!-- Button to clear filter -->
 						<div class="clearFilter">
@@ -76,7 +76,7 @@
 
 						<div>
 							<p id="sort">Sortera</p>
-							<select id="sortera">
+							<select id="sortera" value="Sort price" name="Sort price">
 								<option value="standard">Standard</option>
 								<option value="priceHighToLow">Pris högt till lågt</option>
 								<option value="priceLowToHigh">Pris lögt till högt</option>
