--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 						<div>
 							<p id="sort">Sortera</p>
 							<select id="sortera" value="Sort price" name="Sort price">
-								<option id="standard" value="standard" name="standard">Standard</option>
-								<option id="highToLow" value="priceHighToLow" name="highToLow">Pris högt till lågt</option>
-								<option id="lowToHigh" value="priceLowToHigh" name="lowToHigh">Pris lögt till högt</option>
+								<option id="standard" for="sortera" value="standard" name="standard">Standard</option>
+								<option id="highToLow" for="sortera" value="priceHighToLow" name="highToLow">Pris högt till lågt</option>
+								<option id="lowToHigh" for="sortera" value="priceLowToHigh" name="lowToHigh">Pris lögt till högt</option>
 							</select>
 						</div>
 					</div>
