--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 						<div>
 							<p id="sort">Sortera</p>
-							<select id="sortera" value="Sort price" name="Sort price">
+							<select id="sortera" value="Sort price" name="Sort price" aria-label="Sortera efter pris">
 								<option id="standard" for="sortera" value="standard" name="standard">Standard</option>
 								<option id="highToLow" for="sortera" value="priceHighToLow" name="highToLow">Pris högt till lågt</option>
 								<option id="lowToHigh" for="sortera" value="priceLowToHigh" name="lowToHigh">Pris lögt till högt</option>
