--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<div class="container-choice" id="container-choice">
 						<div class="checkbox-choice" id="filterTextBlockMeat">
 							<h2 id="choice">Välj</h2>
-							<input type="checkbox" class="category-checkbox" id="vegetarian-input" data-filter="vegetarian" value="vegetarian" />
+							<input type="checkbox" class="category-checkbox vegetarian" id="vegetarian-input" data-filter="vegetarian" value="vegetarian" />
 							<label id="vegetarian" for="vegetarian-input" name="vegetarian" value="vegetarian"> Vegetariskt </label>
 							<br />
 							<input type="checkbox" class="category-checkbox" id="beef-input" data-filter="beef" value="beef" />
@@ -70,10 +70,10 @@
 						<div id="checkboxForMobile">
 							<div class="checkbox-choice" id="filterTextBlockAllergies">
 								<h2 id="allergies">Allegier</h2>
-								<input type="checkbox" class="category-checkbox" id="gluten-input" data-filter="gluten" value="gluten" />
+								<input type="checkbox" class="category-checkbox" id="gluten-input" data-filter="gluten" value="allergy_gluten" />
 								<label id="gluten" for="gluten-input" name="gluten" value="gluten"> Glutenfritt </label>
 								<br />
-								<input type="checkbox" class="category-checkbox" id="lactose-input" data-filter="lactose" value="milk" />
+								<input type="checkbox" class="category-checkbox" id="lactose-input" data-filter="lactose" value="allergy_milk" />
 								<label id="lactose" for="lactose-input" name="lactose" value="milk"> Laktosfritt </label>
 							</div>
 							<!-- Button to clear filter -->
